--- a/src/View/Novaview.form
+++ b/src/View/Novaview.form
@@ -733,7 +733,7 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
-                    <Property name="toolTipText" type="java.lang.String" value="VALOR EM REAIS DA COMPRA DO PRODUTO"/>
+                    <Property name="toolTipText" type="java.lang.String" value="VALOR EM REAIS DA COMPRA DO PRODUTO POR LITRO"/>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.MatteColorBorderInfo">
                         <MatteColorBorder bottom="2" left="0" right="0" top="0">
@@ -780,7 +780,7 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
-                    <Property name="toolTipText" type="java.lang.String" value="VALOR DE VENDA DO PRODUTO EM REIAS"/>
+                    <Property name="toolTipText" type="java.lang.String" value="VALOR DE VENDA DO PRODUTO EM REIAS POR LITRO"/>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.MatteColorBorderInfo">
                         <MatteColorBorder bottom="2" left="0" right="0" top="0">
